{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 995,
  "lineage": "b0a67e35-0184-cbc0-29a9-10f8364632a6",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:loadbalancer/app/blue-green-alb/fec08048f8b4c5ff",
            "arn_suffix": "app/blue-green-alb/fec08048f8b4c5ff",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blue-green-alb-187302652.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:loadbalancer/app/blue-green-alb/fec08048f8b4c5ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blue-green-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06d9d46aa225d4789"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c0dd5e84714f330"
              },
              {
                "subnet_id": "subnet-0f9e6c1cdbdc67742"
              }
            ],
            "subnets": [
              "subnet-08c0dd5e84714f330",
              "subnet-0f9e6c1cdbdc67742"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-green-alb",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-green-alb",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01d4f2c54b3adfe08",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eWelcome to Blue-Green Deployment\u003c/h1\u003e\u003cp\u003ePlease use a specific path: /app1/, /app2/, or /app3/\u003c/p\u003e\u003c/body\u003e\u003c/html\u003e",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:loadbalancer/app/blue-green-alb/fec08048f8b4c5ff",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "path_based_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_1",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 300,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app1/aaf85c6993cecd1f",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app1/e0aaf2b092727503",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/af067879b120d4b5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/af067879b120d4b5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec",
            "priority": 100,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.blue",
            "module.alb.aws_lb_target_group.green",
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_2",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 300,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app2/a94fb946ca34b91e",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app2/bf7ac3442feea55d",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/b7268ab3ec0872f7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/b7268ab3ec0872f7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec",
            "priority": 200,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.blue",
            "module.alb.aws_lb_target_group.green",
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_3",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 300,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app3/848226363adc8820",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app3/a7ec921c17a2439c",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/942c8f415d361b20",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app3*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener-rule/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec/942c8f415d361b20",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:listener/app/blue-green-alb/fec08048f8b4c5ff/661ea9a87e69bbec",
            "priority": 300,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.blue",
            "module.alb.aws_lb_target_group.green",
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app1/aaf85c6993cecd1f",
            "arn_suffix": "targetgroup/blue-tg-app1/aaf85c6993cecd1f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app1/aaf85c6993cecd1f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-tg-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_1",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app1",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_1",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app1",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app2/a94fb946ca34b91e",
            "arn_suffix": "targetgroup/blue-tg-app2/a94fb946ca34b91e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app2/a94fb946ca34b91e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-tg-app2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_2",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app2",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_2",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app2",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app3/848226363adc8820",
            "arn_suffix": "targetgroup/blue-tg-app3/848226363adc8820",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/blue-tg-app3/848226363adc8820",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-tg-app3",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_3",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app3",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_3",
              "DeploymentGroup": "blue",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "blue-tg-app3",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app1/e0aaf2b092727503",
            "arn_suffix": "targetgroup/green-tg-app1/e0aaf2b092727503",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app1/e0aaf2b092727503",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-tg-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_1",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app1",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_1",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app1",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app2/bf7ac3442feea55d",
            "arn_suffix": "targetgroup/green-tg-app2/bf7ac3442feea55d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app2/bf7ac3442feea55d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-tg-app2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_2",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app2",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_2",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app2",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "app_3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app3/a7ec921c17a2439c",
            "arn_suffix": "targetgroup/green-tg-app3/a7ec921c17a2439c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680549841444:targetgroup/green-tg-app3/a7ec921c17a2439c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-tg-app3",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "app_3",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app3",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "App": "app_3",
              "DeploymentGroup": "green",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "alb",
              "Name": "green-tg-app3",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:security-group/sg-06d9d46aa225d4789",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d9d46aa225d4789",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask application port",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ECS Security Group",
            "name_prefix": "",
            "owner_id": "680549841444",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "security_group",
              "Name": "ECS Security Group",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "security_group",
              "Name": "ECS Security Group",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:internet-gateway/igw-0bdf10371a7cc4906",
            "id": "igw-0bdf10371a7cc4906",
            "owner_id": "680549841444",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Main-IGW",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Main-IGW",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bdf10371a7cc4906",
            "id": "r-rtb-0901bc17cf51fe0eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0901bc17cf51fe0eb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:route-table/rtb-0901bc17cf51fe0eb",
            "id": "rtb-0901bc17cf51fe0eb",
            "owner_id": "680549841444",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-RT",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-RT",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a80e37032a8705c9",
            "region": "us-east-1",
            "route_table_id": "rtb-0901bc17cf51fe0eb",
            "subnet_id": "subnet-0f9e6c1cdbdc67742"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082315b1afd87d242",
            "region": "us-east-1",
            "route_table_id": "rtb-0901bc17cf51fe0eb",
            "subnet_id": "subnet-08c0dd5e84714f330"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:subnet/subnet-0f9e6c1cdbdc67742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9e6c1cdbdc67742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680549841444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-Subnet-1",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-Subnet-1",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:subnet/subnet-08c0dd5e84714f330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c0dd5e84714f330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680549841444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-Subnet-2",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Public-Subnet-2",
              "Project": "blue-green-deployment",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-01d4f2c54b3adfe08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680549841444:vpc/vpc-01d4f2c54b3adfe08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058876cb888096d15",
            "default_route_table_id": "rtb-0286d3a6fa754217a",
            "default_security_group_id": "sg-00f9ae1139d511ba2",
            "dhcp_options_id": "dopt-03899596c851f9d5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d4f2c54b3adfe08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0286d3a6fa754217a",
            "owner_id": "680549841444",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Main VPC",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "vpc",
              "Name": "Main VPC",
              "Project": "blue-green-deployment",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}